// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionAmount should render 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-r7sfme-0 hEJkEi no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="Label-sc-4akkzw-0 lmoJAx"
          color="success"
        >
          <span
            data-testid="AmountCrypto"
          >
            + 1 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-d5u41q-0 bWntUS border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdfBwQ bcEVDZ"
        height="16"
        width="16"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render currency amount 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-r7sfme-0 hEJkEi no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="Label-sc-4akkzw-0 lmoJAx"
          color="success"
        >
          <span
            data-testid="AmountCrypto"
          >
            + 1 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-d5u41q-0 bWntUS border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdfBwQ bcEVDZ"
        height="16"
        width="16"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-r7sfme-0 hEJkEi no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="Label-sc-4akkzw-0 lmoJAx"
          color="success"
        >
          <span
            data-testid="AmountCrypto"
          >
            + 1 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-d5u41q-0 bWntUS border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdfBwQ bcEVDZ"
        height="16"
        width="16"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 2`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-r7sfme-0 hEJkEi no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Total Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="Label-sc-4akkzw-0 lmoJAx"
          color="success"
        >
          <span
            data-testid="AmountCrypto"
          >
            + 1 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-d5u41q-0 bWntUS border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdfBwQ bcEVDZ"
        height="16"
        width="16"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
